--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <!-- Loader -->
+     <div id="loader-container" class="loader-container">
+        <div class="loader"></div>
+    </div>
+    
     <div class="home">
         <div class="image-container">
             <img src="images/home.jpg" alt="ResumeGenie Image">
